--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "mongodb": "^6.1.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
