--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ GOOGLE_ID= "722676648894-vih90u20u16u26ek1sjicenuifu6978c.apps.googleusercontent
 GOOGLE_SECRET= "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"
 
 MONGODB_URI="mongodb+srv://samuelssams:ecommerce123@ecommerce.mv9pcat.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp"
+
+S3_ACCESS_KEY="AKIA5NZATGO7MAYU4QZT"
+S3_SECRET_ACCESS_KEY="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"
