--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.0",
+    "@aws-sdk/client-s3": "^3.414.0",
+    "@google-cloud/storage": "^7.1.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.1.0",
     "mongoos": "^0.0.1-security",
     "mongoose": "^7.5.2",
+    "multiparty": "^4.2.3",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.3"
   }
 }
